k8s/apps/flux-system/konflate/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate-webhook
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - konflate-webhook.bbck.dev
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: konflate
          namespace: flux-system
          port: 8080
      matches:
        - path:
            type: Exact
            value: /hooks
          method: POST
